# joblens

./: .gitignore  README.md  joblens.db  pyproject.toml  test_scraper.py
app/: database.py  main.py  ollama_client.py  scheduler.py
app/routes/: cover_letter.py  jobs.py  profile.py  saved.py
app/scrapers/: base.py  eucareers.py  euremotejobs.py  eurobrussels.py  hn.py  impactpool.py  remoteok.py
app/templates/: base.html  jobs.html  profile.html  saved.html
docs/: BUILD_PLAN.md  TENDER_MODULE.md
joblens.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
